--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EXERCICIO GT05 SUL</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <style>
     table, td, tr, th {
@@ -79,7 +80,7 @@
     </section>
     <section>
         <h2>Layout Flaxbox</h2>
-        
+
     </section>
 </body> 
 </html>
