--- a/index.html
+++ b/index.html
@@ -82,5 +82,8 @@
         <h2>Layout Flaxbox</h2>
 
     </section>
+    <section>
+        <h2>Form e inputs</h2>
+    </section>
 </body> 
 </html>
