--- a/index.html
+++ b/index.html
@@ -3,87 +3,136 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EXERCICIO GT05 SUL</title>
+    <title>Exercício GT05</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<style>
-    table, td, tr, th {
-        border: 1px solid black;
-        border-collapse: collapse;
-        padding: 3px
-
-    } 
-</style>
 <body>
     <header>
-        <h1>EXERCÍCIO GERAÇÃO TECH</h1>
+        <h1>Exercício Geração Tech</h1>
     </header>
     <div class="container">
-    <section>
-        <h2>Listas</h2>
-        <div class="flex-container-start">
-            <div>
-                <h5>Ordernadas</h5>
-                <ol>
-                    <li>teste</li>
-                    <li>teste</li>
-                    <li>teste</li>
-                    <li>teste</li>
-                    <li>teste</li>
-                </ol>
+        <section>
+            <h2>Listas</h2>
+            <div class="flex-container-start">
+                <div>
+                    <h5>ordenada</h5>
+                    <ol>
+                        <li>teste</li>
+                        <li>teste</li>
+                        <li>teste</li>
+                        <li>teste</li>
+                        <li>teste</li>
+                    </ol>
+                </div>
+                <div>
+                    <h5>não ordenada</h5>
+                    <ul>
+                        <li>teste</li>
+                        <li>teste</li>
+                        <li>teste</li>
+                        <li>teste</li>
+                        <li>teste</li>
+                    </ul>
+                </div>
             </div>
-            <div>
-                <ul>
-                    <li>Teste</li>
-                    <li>Teste</li>
-                    <li>Teste</li>
-                    <li>Teste</li>
-                    <li>Teste</li>
-                </ul>
+        </section>
+        <section>
+            <h2>Tabela</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Nome:</th>
+                        <th>Idade:</th>
+                        <th>Naturalidade:</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td rowspan="2">Victor</td>
+                        <td>24</td>
+                    </tr>
+                    <tr>
+                        <td>Emily</td>
+                        <td colspan="2">21</td>
+                    </tr>
+                    <tr>
+                        <td>Diogo</td>
+                        <td>22</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+        <section>
+            <h2>Botões</h2>
+            <a href="https://www.google.com/" class="button">botão Estilizado</a>
+        </section>
+        <section>
+            <h2>Layout Flexbox</h2>
+            <div class="flex-container">
+                <div class="flex-item">Item 1</div>
+                <div class="flex-item">Item 2</div>
+                <div class="flex-item">Item 3</div>
             </div>
-        </div>
-    </section>
-    <section>
-        <table>
-            <h1>ALUNOS</h1>
-            <thead>
-                <tr>
-                    <th>Nome:</th>
-                    <th>Idade:</th>
-                    <th>Naturalidade</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Victor</td>
-                    <td>24 Anos</td>
-
-                </tr>
-                <tr>
-                    <td>Emily</td>
-                    <td>21 Anos</td>
-                </tr>
-                <tr>
-                    <td>Tiago</td>
-                    <td>27 Anos</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
-    </section>
-    <section>
-        <h2>Botões</h2>
-        <a href="https://google.com/" class="button"> BOTÃO ESTILIZADO</a>
-    </section>
-    <section>
-        <h2>Layout Flaxbox</h2>
-
-    </section>
-    <section>
-        <h2>Form e inputs</h2>
-    </section>
-</body> 
+        </section>
+        <section>
+            <h2>Form e inputs</h2>
+            <div class="card-body">
+                <h2>Formulário de login</h2>
+                <form class="form-input">
+                    <div class="form-group">
+                        <label for="nome">Name:</label>
+                        <input type="text" id="nome" placeholder="digite seu nome" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">e-mail:</label>
+                        <input type="email" id="email" placeholder="geracao@email.com" required>
+                    </div>
+                    <a class="button" type="submit">Enviar</a>
+                </form>
+                
+                <h2>Input radio</h2>
+                <form>
+                    <div class="form-group">
+                        <input type="radio" name="opcao" id="opcao1" checked>
+                        <label for="opcao1">Opção 1</label>
+                    </div>
+                    <div class="form-group">
+                        <input type="radio" name="opcao" id="opcao2">
+                        <label for="opcao2">Opção 2</label>
+                    </div>
+                    <div class="form-group">
+                        <input type="radio" name="opcao" id="opcao3">
+                        <label for="opcao3">Opção 3</label>
+                    </div>
+                    <div class="form-group">
+                        <input type="radio" name="opcao" id="opcao4">
+                        <label for="opcao4">Opção 4</label>
+                    </div>
+                </form>
+                <H2>Input Checkbox</H2>
+                <div class="groupbox">
+                    <input type="checkbox" id="item1" checked>
+                    <label for="item1">Opção 1</label>
+                </div>
+                <div class="groupbox">
+                    <input type="checkbox" id="item2">
+                    <label for="item2">Opção 2</label>
+                </div>
+                <div class="groupbox">
+                    <input type="checkbox" id="item3">
+                    <label for="item3">Opção 3</label>
+                </div>
+                <div class="groupbox">
+                    <input type="checkbox" id="item4">
+                    <label for="item4">Opção 4</label>
+                </div>
+                <h2>Select Color</h2>
+                <div class="colortype"></div>
+            </div>
+        </section>
+    </div>
+    <footer>
+        <p>Geração Tech - Segunda edição</p>
+    </footer>
+</body>
 </html>
